# Clash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: publish-bin.yml
deprecated/windows/: README.md  clash.ps1
docs/: architect-roadmap.md  claude-vars.md
e2e/: features.md  run_test.py  run_test_pwsh.py  test_features.py  test_features_pwsh.py  test_statusline.py
src/: api_test.rs  claude.rs  claude_history.rs  cli.rs  config.rs  crypto.rs  fuzzy.rs  hooks.rs  main.rs  model.rs  ops.rs  prompt_capture.rs  prompts.rs  statusline.rs  tui.rs
src/chat/: command.rs  mod.rs  protocol.rs  store.rs
src/lark/: card.rs  claude_session.rs  command.rs  daemon.rs  lark_cli.rs  mod.rs  render.rs  types.rs
tests/: lark_behavior.rs
tools/: build.sh  check.sh  fetch-bin.sh  test-install.sh
